Fix overlap

--- a/frontend/public/css/navbar.css
+++ b/frontend/public/css/navbar.css
@@ -7,6 +7,7 @@
     position: fixed;
     color: white;
     transition: width 0.3s ease;
+    z-index: 1;
 }
 
 .topnav a {
