--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -6,6 +6,7 @@
     margin-left: 200px;
     padding: 20px;
     background-color: #f1f1f1;
+    z-index: 0;
     transition: margin-left 0.3s ease, transform 0.3s ease;
 }
 
